correct bio/event alignment

--- a/assets/sass/_conditional_small.scss
+++ b/assets/sass/_conditional_small.scss
@@ -79,7 +79,7 @@
     opacity: 0;
     display: block;
     z-index: 2;
-    padding-top: 3.6rem;
+    padding-top: 3.5rem;
     font-size: 1rem;       
   }
     .dc-line-break-small{
@@ -124,7 +124,7 @@
       width: 100%;
       height: 100%;
       padding: 1rem;
-      padding-top: 3.6rem;
+      padding-top: 3.5rem;
       background: #000000;
       z-index: 1;
       //display: none;
